--- a/ResortForecaster.Api/ResortForecaster.Api.csproj
+++ b/ResortForecaster.Api/ResortForecaster.Api.csproj
@@ -12,6 +12,9 @@
   <ItemGroup>
     <PackageReference Include="GraphQL.MicrosoftDI" Version="4.6.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
@@ -19,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ResortForecaster.ApiClients\ResortForecaster.ApiClients.csproj" />
     <ProjectReference Include="..\ResortForecaster.Models\ResortForecaster.Models.csproj" />
+    <ProjectReference Include="..\ResortForecaster.Repos\ResortForecaster.Repos.csproj" />
     <ProjectReference Include="..\ResortForecaster.Services\ResortForecaster.Services.csproj" />
   </ItemGroup>
 
