--- a/ResortForecaster.Services/ResortForecaster.Services.csproj
+++ b/ResortForecaster.Services/ResortForecaster.Services.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ResortForecaster.ApiClients\ResortForecaster.ApiClients.csproj" />
     <ProjectReference Include="..\ResortForecaster.Models\ResortForecaster.Models.csproj" />
+    <ProjectReference Include="..\ResortForecaster.Repos\ResortForecaster.Repos.csproj" />
   </ItemGroup>
 
 </Project>
