--- a/ResortForecaster.ApiClients/ResortForecaster.ApiClients.csproj
+++ b/ResortForecaster.ApiClients/ResortForecaster.ApiClients.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore.Subscriptions" Version="10.5.5" />
+    <PackageReference Include="HotChocolate.Stitching" Version="12.4.1" />
+  </ItemGroup>
+
 </Project>
