--- a/ResortForecaster.Api/Dockerfile
+++ b/ResortForecaster.Api/Dockerfile
@@ -22,4 +22,6 @@ RUN dotnet publish "ResortForecaster.Api.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+VOLUME /var/opt/mssql/data/resort-forecaster-db-volume
 ENTRYPOINT ["dotnet", "ResortForecaster.Api.dll"]
+CMD echo "Hello World"
