--- a/ResortForecaster.Api/ResortForecaster.Api.csproj
+++ b/ResortForecaster.Api/ResortForecaster.Api.csproj
@@ -1,31 +1,48 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>d2b8b9f2-7d8d-419f-9f0c-9135b6845a45</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>d2b8b9f2-7d8d-419f-9f0c-9135b6845a45</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+		<PackageProjectUrl>https://localhost:44987</PackageProjectUrl>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="GraphQL.MicrosoftDI" Version="4.6.1" />
-    <PackageReference Include="HotChocolate.AspNetCore" Version="12.4.0" />
-    <PackageReference Include="HotChocolate.AspNetCore.Subscriptions" Version="10.5.5" />
-    <PackageReference Include="HotChocolate.Stitching" Version="12.4.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="GraphQL" Version="4.7.1" />
+		<PackageReference Include="GraphQL.MicrosoftDI" Version="4.6.1" />
+		<PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="5.2.0" />
+		<PackageReference Include="GraphQL.Server.Ui.Playground" Version="5.2.0" />
+		<PackageReference Include="HotChocolate.AspNetCore" Version="12.4.1" />
+		<PackageReference Include="HotChocolate.Data" Version="12.4.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+		<PackageReference Include="NLog" Version="4.7.13" />
+		<PackageReference Include="NLog.Targets.ElasticSearch" Version="7.7.0" />
+		<PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+		<PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+		<PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+		<PackageReference Include="Serilog.Exceptions" Version="8.0.0" />
+		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+		<PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\ResortForecaster.ApiClients\ResortForecaster.ApiClients.csproj" />
-    <ProjectReference Include="..\ResortForecaster.Models\ResortForecaster.Models.csproj" />
-    <ProjectReference Include="..\ResortForecaster.Repos\ResortForecaster.Repos.csproj" />
-    <ProjectReference Include="..\ResortForecaster.Services\ResortForecaster.Services.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\ResortForecaster.ApiClients\ResortForecaster.ApiClients.csproj" />
+		<ProjectReference Include="..\ResortForecaster.Models\ResortForecaster.Models.csproj" />
+		<ProjectReference Include="..\ResortForecaster.Repos\ResortForecaster.Repos.csproj" />
+		<ProjectReference Include="..\ResortForecaster.Services\ResortForecaster.Services.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="NLog.Web.AspNetCore" Version="4.*" />
+		<PackageReference Include="NLog" Version="4.*" />
+	</ItemGroup>
 
 </Project>
