--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 appsettings.local.json
+appsettings.json
 
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
