Remove :443 from docker override

--- a/ResortForecaster.Api/Properties/launchSettings.json
+++ b/ResortForecaster.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:7171;http://localhost:5171",
       "dotnetRunMessages": true
@@ -24,14 +24,14 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
       "publishAllPorts": true,
-      "useSSL": true,
+      "useSSL": false,
 	  "httpPort": 54623,
 	  "httpsPort": 54624, 
     }
