--- a/ResortForecaster.Api/ResortForecaster.Api.csproj
+++ b/ResortForecaster.Api/ResortForecaster.Api.csproj
@@ -17,10 +17,12 @@
 		<PackageReference Include="GraphQL.Server.Ui.Playground" Version="5.2.0" />
 		<PackageReference Include="HotChocolate.AspNetCore" Version="12.4.1" />
 		<PackageReference Include="HotChocolate.Data" Version="12.4.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+		<PackageReference Include="NEST" Version="7.17.0" />
 		<PackageReference Include="NLog" Version="4.7.13" />
 		<PackageReference Include="NLog.Targets.ElasticSearch" Version="7.7.0" />
 		<PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
