--- a/ResortForecaster.Api/Properties/launchSettings.json
+++ b/ResortForecaster.Api/Properties/launchSettings.json
@@ -29,6 +29,7 @@
     },
     "Docker": {
       "commandName": "Docker",
+      "commandLineArgs": "-d",
       "launchBrowser": true,
       "publishAllPorts": true,
       "useSSL": false,
